experiment: fold w-gcloud images into bbl-dev image

--- a/dockerfiles/cf-deployment-concourse-tasks-bbl-dev/Dockerfile
+++ b/dockerfiles/cf-deployment-concourse-tasks-bbl-dev/Dockerfile
@@ -16,10 +16,23 @@ RUN \
       apt-get -qqy install --fix-missing \
             silversearcher-ag \
             tree \
+            apt-transport-https \
+            openssl \
+            unzip \
       && \
       apt-get clean
 
 RUN go get -u github.com/jteeuwen/go-bindata/...
+
+RUN wget https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-${BOSH_CLI_VERSION}-linux-amd64 && \
+  mv bosh-cli-${BOSH_CLI_VERSION}-linux-amd64 /usr/local/bin/bosh && \
+  chmod +x /usr/local/bin/bosh
+
+# Install gcloud
+RUN echo "deb https://packages.cloud.google.com/apt cloud-sdk-trusty main" > /etc/apt/sources.list.d/google-cloud-sdk.list && \
+  curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add - && \
+  apt-get update && \
+  apt-get -qqy install google-cloud-sdk
 
 # add bbl from latest commit
 ADD bbl /usr/local/bin/
@@ -27,7 +40,3 @@ ADD bbl /usr/local/bin/
 ADD bosh-bootloader /go/src/github.com/cloudfoundry/bosh-bootloader
 
 RUN cp -r /go/src/github.com/cloudfoundry/bosh-bootloader /var/repos
-
-RUN wget https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-${BOSH_CLI_VERSION}-linux-amd64 && \
-  mv bosh-cli-${BOSH_CLI_VERSION}-linux-amd64 /usr/local/bin/bosh && \
-  chmod +x /usr/local/bin/bosh
