--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -323,6 +323,11 @@ resources:
     password: {{docker-password}}
     email: {{docker-email}}
 
+- name: cf-deployment-concourse-tasks-docker-image
+  type: docker-image
+  source:
+    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+
 - name: cf-deployment-concourse-tasks-bbl-dev-dockerfile
   type: git
   source:
@@ -741,6 +746,7 @@ jobs:
 
 - name: openstack-acceptance-tests
   serial: true
+  serial_groups: [openstack-acceptance]
   plan:
   - aggregate:
     - get: bosh-bootloader
@@ -1026,6 +1032,7 @@ jobs:
 
 - name: openstack-acceptance-tests-bump-deployments
   serial: true
+  serial_groups: [openstack-acceptance]
   plan:
   - aggregate:
     - get: bosh-bootloader
