Add resource pool for vsphere leftovers acceptance.

--- a/pipelines/leftovers.yml
+++ b/pipelines/leftovers.yml
@@ -118,6 +118,7 @@ jobs:
       BBL_VSPHERE_VCENTER_PASSWORD: {{vsphere_vcenter_password}}
       BBL_VSPHERE_VCENTER_DC: {{vsphere_vcenter_dc}}
       BBL_VSPHERE_VCENTER_DS: {{vsphere_vcenter_ds}}
+      BBL_VSPHERE_VCENTER_RP: {{vsphere_vcenter_rp}}
 
 - name: releasable
   plan:
