--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -88,6 +88,15 @@ resources:
     secret_access_key: {{aws_secret_access_key}}
     region_name: us-west-2
 
+- name: test-concourse-vars
+  type: s3
+  source:
+    bucket: infra-concourse-secrets
+    versioned_file: test-concourse-vars.yml
+    access_key_id: {{aws_access_key_id}}
+    secret_access_key: {{aws_secret_access_key}}
+    region_name: us-west-2
+
 - name: ubuntu-trusty-stemcell
   type: bosh-io-stemcell
   source:
@@ -1502,6 +1511,7 @@ jobs:
     - get: bbl-cli-dev
       passed: [build-bbl-state-docker]
     - get: concourse-secrets
+    - get: test-concourse-vars
   - do:
     - put: test-bbl-state
       params:
@@ -1527,6 +1537,7 @@ jobs:
         vars_files:
           - concourse-deployment/versions.yml
           - concourse-secrets/concourse-secrets.yml
+          - test-concourse-vars/test-concourse-vars.yml
         ops_files:
           - concourse-deployment/cluster/operations/privileged-https.yml
           - concourse-deployment/cluster/operations/privileged-http.yml
