install texplate on deployment image and use it in source-file

--- a/dockerfiles/deployment/Dockerfile
+++ b/dockerfiles/deployment/Dockerfile
@@ -79,3 +79,5 @@ RUN wget https://s3.amazonaws.com/bosh-init-artifacts/bosh-init-0.0.98-linux-amd
 RUN curl -L "https://cli.run.pivotal.io/stable?release=linux64-binary&source=github" | tar -zx && \
   chmod +x cf && \
   mv cf /usr/local/bin/cf
+
+RUN go get -u github.com/pivotal-cf/texplate
