use xenial for concourse
- concourse-deployment 4.0 uses it

[#158436497]

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -103,7 +103,12 @@ resources:
     name: bosh-google-kvm-ubuntu-trusty-go_agent
     version_family: 3586.latest
 
-- name: ubuntu-trusty-stemcell-azure
+- name: ubuntu-xenial-stemcell-gcp
+  type: bosh-io-stemcell
+  source:
+    name: bosh-google-kvm-ubuntu-xenial-go_agent
+
+- name: ubuntu-xenial-stemcell-azure
   type: bosh-io-stemcell
   source:
     name: bosh-azure-hyperv-ubuntu-trusty-go_agent
@@ -1276,7 +1281,7 @@ jobs:
       passed: [bbl-downstream-docker-image]
     - get: bbl-cli-dev
       passed: [bbl-downstream-docker-image]
-    - get: ubuntu-trusty-stemcell-azure
+    - get: ubuntu-xenial-stemcell-azure
     - get: test-concourse-vars
   - task: bbl-leftovers
     file: ci/scripts/bosh-bootloader/leftovers/task.yml
@@ -1337,7 +1342,7 @@ jobs:
     params:
       source_file: source-file/bosh-source.json
       manifest: concourse-deployment/cluster/concourse.yml
-      stemcells: [ ubuntu-trusty-stemcell-azure/stemcell.tgz ]
+      stemcells: [ ubuntu-xenial-stemcell-azure/stemcell.tgz ]
       vars_files:
         - concourse-deployment/versions.yml
         - concourse-secrets/concourse-secrets.yml
@@ -1397,7 +1402,7 @@ jobs:
     - get: bosh-bootloader
       passed: [build-bbl-state-docker]
       trigger: true
-    - get: ubuntu-trusty-stemcell-gcp
+    - get: ubuntu-xenial-stemcell-gcp
     - get: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks-bbl-dev
       passed: [build-bbl-state-docker]
@@ -1429,7 +1434,7 @@ jobs:
       params:
         source_file: test-bbl-state/bdr-source-file
         manifest: concourse-deployment/cluster/concourse.yml
-        stemcells: [ ubuntu-trusty-stemcell-gcp/stemcell.tgz ]
+        stemcells: [ ubuntu-xenial-stemcell-gcp/stemcell.tgz ]
         vars_files:
           - concourse-deployment/versions.yml
           - concourse-secrets/concourse-secrets.yml
