use correct toJson function for go template
[#158436497]

--- a/scripts/bosh-bootloader/create-bosh-deployment-source-file/source-template.yml
+++ b/scripts/bosh-bootloader/create-bosh-deployment-source-file/source-template.yml
@@ -2,6 +2,6 @@
 target: {{ env "TARGET" }}
 client: {{ env "CLIENT" }}
 client_secret: {{ env "CLIENT_SECRET" }}
-ca_cert: {{ toJSON (env "CA_CERT") }}
+ca_cert: {{ toJson (env "CA_CERT") }}
 jumbox_url: {{ env "JUMPBOX_URL" }}:22
-jumpbox_ssh_key: {{ toJSON (env "JUMPBOX_SSH_KEY") }}
+jumpbox_ssh_key: {{ toJson (env "JUMPBOX_SSH_KEY") }}
