spell jumpbox correctly again
[#158436497]

--- a/scripts/bosh-bootloader/create-bosh-deployment-source-file/source-template.yml
+++ b/scripts/bosh-bootloader/create-bosh-deployment-source-file/source-template.yml
@@ -3,5 +3,5 @@ target: {{ env "TARGET" }}
 client: {{ env "CLIENT" }}
 client_secret: {{ env "CLIENT_SECRET" }}
 ca_cert: {{ toJson (env "CA_CERT") }}
-jumbox_url: {{ env "JUMPBOX_URL" }}:22
+jumpbox_url: {{ env "JUMPBOX_URL" }}:22
 jumpbox_ssh_key: {{ toJson (env "JUMPBOX_SSH_KEY") }}
