get rid of unused cf-d fork resource
- and point to the correct bbl-state

--- a/pipelines/concourse.yml
+++ b/pipelines/concourse.yml
@@ -25,22 +25,6 @@ resources:
     branch: v3.14.1
     uri: https://github.com/concourse/concourse-bosh-deployment.git
 
-- name: cf-deployment-concourse-tasks-bbl-dev-docker-image
-  type: docker-image
-  source:
-    repository: cfinfrastructure/cf-deployment-concourse-tasks-bbl-dev
-    username: {{docker-username}}
-    password: {{docker-password}}
-    email: {{docker-email}}
-
-# Fork of cf-deployment-concourse-tasks that has features
-# we need that are not yet merged into upstream
-- name: cf-deployment-concourse-tasks-infrastructure
-  type: git
-  source:
-    branch: infrastructure
-    uri: https://github.com/desmondrawls/cf-deployment-concourse-tasks.git
-
 - name: concourse-secrets
   type: s3
   source:
@@ -124,17 +108,6 @@ jobs:
     - get: concourse-deployment
       tags:
       - {{vsphere_network_name}}
-    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
-      tags:
-      - {{vsphere_network_name}}
-    - get: cf-deployment-concourse-tasks
-      resource: cf-deployment-concourse-tasks-infrastructure
-      tags:
-      - {{vsphere_network_name}}
-    - get: vars-store
-      resource: infrastructure-ci-bbl-states
-      tags:
-      - {{vsphere_network_name}}
     - get: concourse-secrets
       tags:
       - {{vsphere_network_name}}
@@ -147,7 +120,7 @@ jobs:
   - task: create-bosh-source-file
     file: ci/scripts/bosh-bootloader/create-bosh-deployment-source-file/task.yml
     params:
-      BBL_STATE_DIR: infra-ci
+      BBL_STATE_DIR: vsphere-concourse
     input_mapping:
       bbl-states: infrastructure-ci-bbl-states
   - put: concourse-bosh-deployment
