run vsphere tasks on vsphere worker

--- a/pipelines/concourse.yml
+++ b/pipelines/concourse.yml
@@ -119,11 +119,15 @@ jobs:
       - {{vsphere_network_name}}
   - task: create-bosh-source-file
     file: ci/scripts/bosh-bootloader/create-bosh-deployment-source-file/task.yml
+    tags:
+    - {{vsphere_network_name}}
     params:
       BBL_STATE_DIR: vsphere-concourse
     input_mapping:
       bbl-states: infrastructure-ci-bbl-states
   - put: concourse-bosh-deployment
+    tags:
+    - {{vsphere_network_name}}
     params:
       source_file: source-file/bosh-source.json
       manifest: concourse-deployment/cluster/external-worker.yml
