--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1217,6 +1217,7 @@ jobs:
       BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
       BBL_GCP_ZONE: {{bbl_gcp_zone}}
       BBL_TEST_ENV_ID_PREFIX: bbl-ci-bosh-cli
+      BBL_DOWN_TIMEOUT: 20m
 
 # CF Deployment Pipelines
 - name: bbl-downstream-docker-image
